--- a/source/widget/Public.FocusPic/ui-focusPic.less
+++ b/source/widget/Public.FocusPic/ui-focusPic.less
@@ -9,6 +9,7 @@
 
 #carousel-example-generic {
 		height: 380px;overflow: hidden;
+		background: #f8f8f8;
 		/*=================/图片轮播大图/============================*/
 		.focus-list {
 				overflow: hidden;padding:0;
