--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -260,6 +260,7 @@ ul,li{list-style: none;}
 			    &:last-child{
 			    	position: absolute;
     				right: 0;
+    				bottom:0;
 			    }
 			}
 			.subject{
