首页和直播主页

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1573,7 +1573,8 @@ ul,li{list-style: none;}
     }
 }
 .problem{
-	margin-bottom: 40px;
+	background: #fff;
+	padding-bottom: 34px;
 	img{
 		margin-right: 10px;
 	}
@@ -1586,13 +1587,12 @@ ul,li{list-style: none;}
 	}
 	.answer{
 		display: none;
-		margin-bottom: 40px;
 		padding-top: 20px;
 		div{
 			display: inline-block;
 		}
 		.text{
-			border:1px solid rgba(102,102,102,0.5); 
+			border:1px solid #dcdcdc; 
 			box-sizing: border-box;
 			width: 1110px;
 			padding: 20px;
