--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -13,26 +13,22 @@
   position: relative;
   margin-bottom: 20px;
 }
-
 .live-title span {
   display: inline-block;
   margin-right: 15px;
   float: left;
 }
-
 .live-title div {
   height: 22px;
   margin-left: 87px;
   border-bottom: 1px solid #eaeaea;
 }
-
 .live-scroll-btn-container {
   position: absolute;
   right: 0;
   top: 8px;
   list-style: none;
 }
-
 .live-scroll-btn-container li {
   float: left;
   margin-left: 5px;
@@ -41,20 +37,16 @@
   border: 1px solid #e5e7ec;
   border-radius: 10px;
 }
-
 .live-scroll-btn-on {
   background-color: #1e89e0
 }
-
 .live-scroll-box, .live-list-container {
   overflow: hidden;
   width: 1274px;
 }
-
 .live-scroll-box-container {
   width: 100%;
 }
-
 .live-scroll-container {
   position: relative;
   width: 100%;
@@ -62,24 +54,19 @@
   overflow: hidden;
   margin-bottom: 30px;
 }
-
 .live-list {
   overflow: hidden;
   width: 100%;
   margin-bottom: 20px;
 }
-
-
 .live-card:nth-child(4n) {
   margin-right: 0;
 }
-
 .live-course-hover {
   position: absolute;
   bottom: 0;
   height: 80px;
 }
-
 .live-course-content {
   width: 260px;
   position: absolute;
@@ -89,31 +76,23 @@
   font-size: 14px;
   text-overflow: ellipsis
 }
-
 .live-course-box {
   position: relative;
   display: inline-block;
 }
-
 .live-course-box:hover .live-course-title {
   height: 198px;
 }
-
 .bg-red {
   background: #e74c3c;
 }
-
-;
 .bg-yellow {
   background: #ffa700;
 }
-
-;
 .bg-blue {
   background: #3bafda;
 }
-
-.live-card .join-live {
+/* .live-card .join-live {
 
   .join-live {
 
@@ -174,7 +153,7 @@
     color: #a0a0a0;
     margin-left: 10px
   }
-;
+
   .live-time-tip-container {
     line-height: 30px;
   }
@@ -204,7 +183,7 @@
     font-size: 12px;
     color: #333;
     margin-right: 5px;
-
+  }
     .live-time-tip-container span {
       color: #333333;
       font-size: 16px;
@@ -298,18 +277,7 @@
         margin-left: 4px;
       }
     }
-    .live-rank-title {
-      width: @width;
-      height: 38px;
-      font-size: @fs12;
-      border: @borderea;
-      background-color: #fcfcfc;
-      .current {
-        background-color: #fff;
-        color: #1e89e0;
-        border-right: 1px solid #eaeaea;
-      }
-    }
+    
     .live-rank-focus {
       color: #1e89e0;
     }
@@ -325,20 +293,48 @@
       list-style: none;
       cursor: pointer;
     }
-    .live-rank-num {
-      display: inline-block;
-      width: 65px;
-      height: 36px;
-      margin-left: -1px;
-      text-align: center;
-      line-height: 36px;
-      border-left: 1px solid #eaeaea;
-    }
+    
     .live-hidden {
       display: none;
     }
     .text-center {
       text-align: center;
     }
+  }
+} */
+
+.live-rank-title {
+  width: @width;
+  height: 38px;
+  font-size: @fs12;
+  border: @borderea;
+  background-color: #fcfcfc;
+  li {
+    float: left;
+    width: 65px;
+    height: 36px;
+    text-align: center;
+    line-height: 36px;
+    list-style: none;
+    cursor: pointer;
+  }
+  .current {
+    background-color: #fff;
+    color: #1e89e0;
+    border-right: 1px solid #eaeaea;
+  }
+  .live-rank-num {
+    display: inline-block;
+    width: 65px;
+    height: 36px;
+    margin-left: -1px;
+    text-align: center;
+    line-height: 36px;
+    border-left: 1px solid #eaeaea;
+  }
+}
+.live-hidden{
+  .live-card{
+    margin-bottom: 20px;
   }
 }
