--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -22,6 +22,7 @@ ul,li{list-style: none;}
 		}
 		&>p:last-child{
 			line-height: 20px;
+            
 		}
 		&:hover{
 			color:#3bafda;
@@ -1061,7 +1062,7 @@ ul,li{list-style: none;}
 			p{
 				margin-bottom: 0;
 				line-height: 55px;
-				font-size: 14px;
+				font-size: 12px;
 				text-align: center;
 				padding: 0 5px;
 				margin-top: 0;
@@ -1172,18 +1173,37 @@ ul,li{list-style: none;}
 		}
 	}
     &.teacher-coach-bomb {
-        .dialog-down-wrap {
-            .dialog-border {
-                height: 80px;
-                .dialog-down {
-                    height: 80px;line-height: 80px;
-                    ul {
-                        li {
-                            img {width:60px;height: 60px;margin:0 5px;}
-                        }
+         .dialog-second {
+            height:195px;
+            .dialog-top {
+                height:105px;margin-top:35px;
+             }
+        }
+    }
+    &.teacher-coach-bomb-app {
+        .dialog-second {
+            height:195px;
+            .dialog-top {
+                height:130px;position: relative;
+                dt {
+                    width:100px;position: absolute;left:10px;top:25px;z-index: 1;
+                }
+                dd.app-name {
+                    width:130px;position: absolute;left:17px;top:90px;z-index: 1;
+                }
+                dd.app-text {
+                    width:130px;height:55px;line-height:25px; position: absolute;left:140px;top:65px;z-index: 1;
+                }
+                dd.app-code {
+                    width:116px;height: 121px;position: absolute;right:10px;top:-3px;z-index: 1;
+                    img {
+                        width:110px;height: 110px;border:3px solid #fff;margin-top:5px;
                     }
                 }
             }
+        }
+        .dialog-center {
+            p {text-align: left;padding-left:10px;}
         }
     }
 }
