--- a/source/widget/Mall.indexTrends/ui-trends.less
+++ b/source/widget/Mall.indexTrends/ui-trends.less
@@ -10,7 +10,7 @@
 	width: 280px;
 	height: 260px;
 	overflow: hidden;
-	background:rgba(255,255,255,0.7);
+	background:rgba(255,255,255,0.8);
 	position: absolute;
 	right: 0;
 	top:60px;
@@ -76,13 +76,13 @@
 				}
 				.QRcode_icon{
 					position: absolute;
-					bottom: -4px;
+					bottom: 5px;
 					width: 100%;
 					left:0px;
 					box-sizing: border-box;
 					padding:0 34px;
 					p{
-						margin-top: 10px
+						font-size: 14px;
 					};
 					div:first-child{
 						li{
