--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -397,6 +397,8 @@ ul.grade-list {
                         line-height: 16px;
                         margin-top: 0;
                         margin-bottom: 16px;
+                        height: 16px;
+                        overflow: hidden;
                         span{
                             font-size: 14px;
                             float: right;
@@ -427,7 +429,7 @@ ul.grade-list {
                 a.success_join{
                     top:0 ;
                     span{
-                        background: #bfbfbf ;
+                        background: #bfbfbf !important;
                     }
                 }
             }
