--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -338,3 +338,14 @@
     margin-bottom: 20px;
   }
 }
+.liveOrderFailModal .modal-body, .liveOrderSuccessModal .modal-body {
+  text-align: center;
+  height: 420px
+}
+.orderFailTip, .orderSuccessTip {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  margin-bottom: 10px;
+  color: #999;
+}
