--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -409,7 +409,7 @@ ul.grade-list {
             .live-course-box{
                 overflow: hidden;
                 position: relative;
-                
+                width: 290px;
                 .live-course-title{
                     display: block;
                     position: absolute;
@@ -436,6 +436,8 @@ ul.grade-list {
         }
         .live-teacher-photo {
             margin-top:0;
+            width: 290px;
+            height: 198px;
         }
 .page-turn {
     position: absolute;
