--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -309,6 +309,7 @@
   font-size: @fs12;
   border: @borderea;
   background-color: #fcfcfc;
+  margin-bottom: 10px;
   li {
     float: left;
     width: 65px;
