--- a/source/widget/Mall.indexTrends/ui-trends.less
+++ b/source/widget/Mall.indexTrends/ui-trends.less
@@ -76,7 +76,7 @@
 				}
 				.QRcode_icon{
 					position: absolute;
-					bottom: 5px;
+					bottom: 3px;
 					width: 100%;
 					left:0px;
 					box-sizing: border-box;
@@ -138,9 +138,12 @@
 					    width: 60px;
 					    height: 60px;
 					    position: absolute;
-					    border-radius: 50%;
-					    box-shadow: 0px 0px 1px 1px #cccccc;
 					    left: 110px;
+					    img{
+					    	border-radius: 50%;
+					    	border: 1px solid #ccc;
+					    	width: 60px;
+					    }
 				}
 				.user-info {
 					.user-sex {
