--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -429,7 +429,7 @@ ul.grade-list {
                 a.success_join{
                     top:0 ;
                     span{
-                        background: #bfbfbf !important;
+                        background: #bfbfbf !important;cursor: default;
                     }
                 }
             }
