--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1561,7 +1561,7 @@ ul,li{list-style: none;}
         }
         p.difficulty {
             height:30px; overflow: hidden;padding-left:15px;color: #666;font-size: 14px;
-            a {padding-right:10px;color: #666;}
+            a {padding-right:10px;}
         }
     }
     .rank-satisfy {
