--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -355,9 +355,9 @@ ul.grade-list {
             .live-time-tip{
                 .live-time-tip-container{
                     line-height: 22px;
-                    height: 80px;
+                    height: 70px;
                     box-sizing: border-box;
-                    padding: 16px 10px;
+                    padding:10px;
                     margin-right: 10px;
                     p{
                         margin-bottom: 0;
@@ -394,10 +394,10 @@ ul.grade-list {
                     &>p:nth-child(1){
                        color: #333;
                         font-size: 16px;
-                        line-height: 16px;
+                        line-height: 20px;
                         margin-top: 0;
-                        margin-bottom: 16px;
-                        height: 16px;
+                        margin-bottom: 15px;
+                        height: 20px;
                         overflow: hidden;
                         span{
                             font-size: 14px;
@@ -427,7 +427,7 @@ ul.grade-list {
                     }
                 }
                 a.success_join{
-                    top:0 ;
+                    top:0 ;cursor: default;
                     span{
                         background: #bfbfbf !important;cursor: default;
                     }
