--- a/source/static/css/default.css
+++ b/source/static/css/default.css
@@ -306,9 +306,9 @@ button.active,
 }
 .row-page-turn .live-card .live-time-tip .live-time-tip-container {
   line-height: 22px;
-  height: 80px;
+  height: 70px;
   box-sizing: border-box;
-  padding: 16px 10px;
+  padding: 10px;
   margin-right: 10px;
 }
 .row-page-turn .live-card .live-time-tip .live-time-tip-container p {
@@ -344,10 +344,10 @@ button.active,
 .row-page-turn .live-card .live-time-tip .live-time-tip-container > p:nth-child(1) {
   color: #333;
   font-size: 16px;
-  line-height: 16px;
+  line-height: 20px;
   margin-top: 0;
-  margin-bottom: 16px;
-  height: 16px;
+  margin-bottom: 15px;
+  height: 20px;
   overflow: hidden;
 }
 .row-page-turn .live-card .live-time-tip .live-time-tip-container > p:nth-child(1) span {
@@ -377,6 +377,7 @@ button.active,
 }
 .row-page-turn .live-card .live-course-box a.success_join {
   top: 0 ;
+  cursor: default;
 }
 .row-page-turn .live-card .live-course-box a.success_join span {
   background: #bfbfbf !important;
