--- a/source/widget/Public.FocusPic/ui-focusPic.less
+++ b/source/widget/Public.FocusPic/ui-focusPic.less
@@ -33,11 +33,20 @@
 					width:712px;left:388px; 
 					li { 
 						width: 66px;height: 26px;line-height: 26px; border-radius: 1px; margin:0 1px;cursor: pointer; text-align: center;list-style: none;overflow: hidden;background-color:rgba(255,255,255,0.7);color:#333;text-indent: 0;border:0;
+                        a{
+                          float: left;
+                          width: 100%;
+                          color: #333;
+                            &:hvoer{
+                              color: #333;
+                            }
+                        }
 					}
-					li.active {background: rgba(0,0,0,0.7);color: #fff;}
+					li.active {
+                        background: rgba(0,0,0,0.7);color: #fff;
+                        a {color:#fff;}
+                    }
 				}
 		}
 }
-
-
 
