--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -246,6 +246,7 @@ a,button,.btn{
           margin-left:10px;
           &:hover{
             color:#1e89e0;
+            text-decoration: underline;
           }
           i{
             font-size: 16px;
