--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -294,7 +294,7 @@ ul,li{list-style: none;}
 	border-radius: @amount;
 }
 .course-label{
-	font-family: "SimSun";
+	
 	display: inline-block;
 	padding: 2px 8px;
 	font-size: @fontSize;
@@ -334,7 +334,6 @@ ul,li{list-style: none;}
 	background: url("img/icon-record.png") no-repeat left center;
 }
 .course-list {
-	font-family: "SimSun";
 	// border-bottom: 1px solid @borderColor;
 	width: 100%;
 	// padding: 12px 12px 20px;
@@ -357,11 +356,17 @@ ul,li{list-style: none;}
 			padding: 6px 12px;
 			border-radius: 3px;
 		}
+		p{
+			margin-bottom: 4px;
+		}
+		p:first-child{
+			margin-bottom: 8.5px;
+		}
 		p:last-child{
-			margin-top: 24px;
+			margin-top: 40px;
 		}
 		img{
-			margin: 30px 0 12px 0px;
+			margin: 30px 0 0px 0px;
 			position: relative;
 		}
 		a{
@@ -831,7 +836,6 @@ ul,li{list-style: none;}
 		p.course-title{
 			.title-detail{
 				font-size: 12px;
-				font-family: "SimSun";
 			}
 		}
 		.course-teacher{
@@ -974,7 +978,7 @@ ul,li{list-style: none;}
 			line-height: 18px;
 		    margin-bottom: 16px;
 		    padding-bottom: 12px;
-		    border-bottom: 1px solid #cccccc;
+		    border-bottom: 1px solid #dcdcdc;
 		}
 	}
 }
@@ -1017,7 +1021,7 @@ ul,li{list-style: none;}
 				color: #fff;
 				a {
 					color: #fff;
-					font-family: "SimSun";
+					
 					font-size: 14px;
 				}
 				img{
@@ -1129,7 +1133,7 @@ ul,li{list-style: none;}
 					color: #666666;
 					display: inline;
 					float: left;
-					font-family: "SimSun";
+					
 					font-size: 12px;
 					span {
 						color: #333333;
@@ -1335,7 +1339,7 @@ ul,li{list-style: none;}
 	line-height: 42px;
 	font-size: 12px;
 	color: #999999;
-	font-family: "SimSun";
+	
     margin-bottom: 10px;
 	p{
 		font-size: 12px;
@@ -1354,7 +1358,7 @@ ul,li{list-style: none;}
 	//height: 220px;
 	padding: 10px 5px 10px 5px;
 	background: #fcfcfc;
-	font-family: "SimSun";
+	
 	font-size: 14px;
 	color: #333;
 	overflow: hidden;
