--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -134,7 +134,10 @@
                         }
                         &.name-r {
                             float: right;margin-right: 10px;
-                            strong {font-size: 14px;font-weight: normal;padding-left:5px;}
+                            strong {
+                                font-size: 14px;font-weight: normal;padding-left:5px;
+                                a {color:#fff;}
+                            }
                         }
                     }
         } 
@@ -204,7 +207,7 @@
             }
         }
         .course-content-teacher {
-				height: 90px; overflow: hidden;margin:10px 0 20px;background: #f9f9f9;
+				height: 90px; overflow: hidden;margin:0 0 20px;background: #f9f9f9;
 				span.f-left {
 					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:20px;color: #666;
 				}
