--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -899,7 +899,7 @@ ul,li{list-style: none;}
     padding: 0px 0px 0px 10px;
     position: relative;
     overflow: visible;
-    background: #fcfcfc;
+    background: #fff;
     margin-right: 10px;
     a:hover{
     	text-decoration: underline;
