--- a/source/widget/Public.Footer/footer.less
+++ b/source/widget/Public.Footer/footer.less
@@ -96,3 +96,17 @@
     }
      
 }
+.closeH{
+    display: block;
+    position: absolute;
+    top: -25px;
+    right: 0;
+    width: 25px;
+    background: rgb(233,80,59);
+    height: 25px;
+    text-align: center;
+    line-height: 25px;
+    color: white;
+    cursor: pointer;
+    font-size: 18px;
+}
