商城样式优化

--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -322,7 +322,7 @@
   .current {
     background-color: #fff;
     color: #1e89e0;
-    //border-right: 1px solid #eaeaea;
+    border-right: 1px solid #eaeaea;
   }
   .live-rank-num {
     display: inline-block;
@@ -331,7 +331,7 @@
     margin-left: -1px;
     text-align: center;
     line-height: 36px;
-   // border-left: 1px solid #eaeaea;
+     border-left: 1px solid #eaeaea;
   }
 }
 .live-hidden{
