--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1254,11 +1254,11 @@ ul,li{list-style: none;}
 		}
 	}
 	li.popular-rank.active {
-		//border-left: 1px solid #fcfcfc
+		border-left: 1px solid #fcfcfc
 	}
 	li.active{
-		//border-right: 1px solid #eaeaea;
-		//border-left: 1px solid #eaeaea;
+		border-right: 1px solid #eaeaea;
+		border-left: 1px solid #eaeaea;
 		background: #fff;
 		a{
 			color: @blueColor;
