--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -393,12 +393,12 @@ ul.grade-list {
                         }
                     }
                     &>p:nth-child(1){
-                       color: #333;
+                        color: #333;
                         font-size: 16px;
-                        line-height: 16px;
-                        margin-top: 0;
-                        margin-bottom: 16px;
-                        height: 16px;
+                        line-height: 20px;
+                        margin-top: -2px;
+                        margin-bottom: 12px;
+                        height: 20px;
                         overflow: hidden;
                         span{
                             font-size: 14px;
