--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -310,6 +310,7 @@
   border: @borderea;
   background-color: #fcfcfc;
   margin-bottom: 10px;
+  margin-top: 10px;
   li {
     float: left;
     width: 65px;
