--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -368,7 +368,7 @@
 					}
 				}
 				p.teacher-coach{
-					font-size: 14px;
+					font-size: 12px;
 					font-family: "Microsoft YaHei";
 					height: 20px;
 					overflow: hidden;
@@ -378,6 +378,9 @@
 					color: #999;
 					font-size: 12px;
 					font-family: "SimSun";
+				}
+				p.phone_icon{
+					color: #333;
 				}
 				p.relook-course{
 					color: @red;
@@ -1594,4 +1597,280 @@ button.ajust-course-btn[disabled]{
 		margin-top: 40px;
 		text-align: center;
 	}
+}
+// 在线作业
+.homewok-form{
+	.modal-dialog{
+		.modal-content{
+			background: #f1f2f6;
+			border: none;
+			.modal-header{
+				border: none;
+				background: #4db4dd;
+				color: #fff;
+			}
+			.modal-body{
+				padding: 0;
+				background: #f1f2f6;
+			}
+
+		}
+
+	}
+}
+.courseListHomewok-wrap{
+	padding-bottom: 40px;
+	max-width: 1190px;
+	margin: 0 auto;
+	.homework-online-list{
+		background: #fff;
+		margin: 24px 0;
+		.homework-list-title{
+			margin: 0;
+			border-left: 6px solid #4db4dd;
+			height: 42px;
+			line-height: 42px;
+			font-size: 18px;
+			font-weight: normal;
+			.homework-listnum{
+				float: left;
+				margin-left: 32px;
+				color: #363636;
+			}
+			.homework-listtotal{
+				float: right;
+				margin-right: 38px;
+				color: #6bbcdc;
+			}
+		}
+		.homework-list-content{
+			padding: 26px 38px;
+			border-bottom: 1px solid #eaeaea;
+			border-top: 1px solid #eaeaea;
+			color: #5a5a5a;
+			line-height: 26px;
+			font-size: 14px;
+			p{
+				line-height: 36px;
+			}
+			.homework-list-audio{
+				width: 100%;
+			}
+			.homework-item-input{
+				border: none;
+				border-bottom: 1px solid #4db4dd;
+				margin: 0 5px;
+				text-align: center;
+				padding: 0 5px;
+				background: #f5fcff;
+			}
+			.homework-list-selectlist-hover{
+				li{
+					a{
+						text-decoration: none;
+						&:hover{
+							background: #aae2f7;
+							color: #fff;
+							text-decoration: none;
+
+						}
+
+					}
+				}
+			}
+			.homework-list-selectlist{
+				overflow: hidden;
+				margin-top: 10px;
+				li{
+					line-height: 44px;
+					width: 100%;
+					margin-bottom: 18px;
+					a{
+						background: #f5fcff;
+						color: #5a5a5a;
+						display: inline-block;
+						width: 100%;
+						height: 100%;
+						padding-left: 20px;
+					}
+				}
+				.current{
+					a{
+						background: #aae2f7;
+						color: #fff;
+					}
+				}
+				.homework-static-true{
+					position: relative;
+					a{
+						background: #36bd66;
+						color: #fff;
+					} 
+					img{
+						position: absolute;
+						right: 12px;
+						top: 6px;
+						height: 34px;
+					}
+				}
+				.homework-static-false{
+					position: relative;
+					a{
+						background: #f47f68;
+						color: #fff;
+					} 
+					img{
+						position: absolute;
+						right: 12px;
+						top: 6px;
+						height: 34px;
+					}
+				}
+			}
+			.homework-list-fullfill{
+				padding: 15px 20px;
+				background: #f5fcff;
+			}
+		}
+		.homework-list-analysis{
+			p{
+				font-size: 14px;
+			}
+			p.homework-list-analysis-title{
+				color: #4db4dd;
+				font-size: 16px;
+			}
+		}
+	}	
+	.encourage-words{
+		text-align: center;
+		color: #d8d8d8;
+		line-height: 24px;
+		font-size: 14px;
+		margin-bottom: 0;
+	}
+	.homework-list-commitBtn{
+		text-align: center;
+		margin-top: 24px;
+		.commit-homework-btn{
+			background: #f67f85;
+			width: 50%;
+			height: 42px;
+			line-height: 28px;
+			font-size: 16px;
+			color: #fff;
+			border: none;
+		}
+	}
+	.homewokresolution-title{
+		background: url('img/Homewokresolution.jpg') no-repeat center center;
+		// height: 216px;
+		width: 100%;
+		background-size: 100% 100%;
+		.homewokresolution-title-up{
+			width: 100%;
+			margin: 0 auto;
+			height: auto;
+			background-size: 39%;
+			font-size: 18px;
+			color: #fff;
+			padding-top: 25px;
+			overflow: hidden;
+			max-height: 160px;
+			.homewokresolution-title-up-left{
+				float: left;
+				width: 40%;
+				text-align: right;
+				margin-right: 4%;
+				img{
+					width: 80%;
+					max-width: 130px;
+				}
+			}
+			.homewokresolution-title-up-right{
+				float: left;
+				padding-top: 30px;
+			}
+		}
+		.homewokresolution-title-down{	
+			text-align: center;
+			height: 76px;
+			padding-top: 14px;
+			ul{
+				li{
+					display: inline-block;
+					width: 32%;
+					line-height: 26px;
+					span{
+						display: block;
+						color: #fff;
+						font-size: 18px;
+					}
+					span.homework-static{
+						color: #b3e6fa;
+						font-size: 14px;
+					}
+				}
+			}
+		}
+	}
+}
+/*弹框样式*/
+html #xuebox_wrong_submit {
+	text-align: center;
+	background-color: #ffffff;
+}
+html #xuebox_wrong_submit .dialog_content {
+	width: 300px;
+}
+html .dialog {
+	width: auto;
+	position: fixed;
+	_position: absolute;
+	z-index: 1000;
+}
+html .dialog table {
+	background-color: transparent;
+}
+#xuebox_wrong_submit .dialog_head{
+	float: left;
+	width: 0;
+	height: 0;
+}
+#xuebox_wrong_submit .dialog_head p{
+	height: 0;
+	overflow: hidden;
+}
+html .btn_red {
+	padding: 5px 20px;
+	font-size: 14px;
+	color: #ffffff;
+	background-color: #ed5565;
+	border: none;
+	border-radius: 3px;
+	margin-right: 10px;
+	&:hover,&:focus{
+		color: #fff;
+	}
+}
+html .btn_cancel{
+	padding: 5px 20px;
+	font-size: 14px;
+	border: none;
+	border-radius: 3px;
+}
+html .dialog_mask {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	_position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 999;
+	background-color: #000;
+	filter: alpha(opacity=30);
+	opacity: 0.3;
+}
+#xuebox_wrong_submit_buttons{
+	padding: 10px;
 }
