--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -325,6 +325,9 @@
            .btn-join-exam {
                width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #ffe4d0; border:1px solid #f0cab6;color: #eb711d;
            }
+           .btn-live-block {
+               width: 160px;height: 40px;font-size: 18px;border-radius: 2px;background: #ffe4d0; border:1px solid #f0cab6;color: #eb711d;
+           }
 			.collect {
 				 display: inline-block;background: url(img/icon_star.png) 0 2px no-repeat;padding-left:16px;margin:10px 0 0 20px;
               a {
