--- a/source/widget/Mall.indexTrends/ui-trends.less
+++ b/source/widget/Mall.indexTrends/ui-trends.less
@@ -89,9 +89,7 @@
 						&:hover{
 							li{
 
-								background: url('img/weixin.png') no-repeat center;
-
-								background: url('/static/img/weixin.png') no-repeat center;
+								background: url('/static/img/weixin.png?1') no-repeat center;
 
 								background-size: 100% 100%;
 							}
@@ -99,8 +97,6 @@
 						li{
 							width: 80px;
 							height: 87px;
-
-							background: url('img/weixin_icon.png') no-repeat center 30px;
 
 							background: url('/static/img/weixin_icon.png') no-repeat  center 30px;
 
@@ -113,7 +109,6 @@
 							width: 80px;
 							height: 87px;
 
-							background: url('img/app_icon.png') no-repeat center 30px;
 
 							background: url('/static/img/app_icon.png') no-repeat center 30px;
 
@@ -123,9 +118,8 @@
 						&:hover{
 							li{
 
-								background: url('img/app.png') no-repeat center;
 
-								background: url('/static/img/app.png') no-repeat center;
+								background: url('/static/img/app.png?1') no-repeat center;
 
 								background-size: 100% 100%;
 							}
