--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -913,7 +913,13 @@
 
 .center-teacher-course {
     background-color: white;
+    padding-top: 20px;
+    overflow: hidden;
     .border-radius(2px);
+    .course-test-select {
+        margin-left: 45px;
+        
+    }
 }
 
 .center-teacher-report {
