--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1189,27 +1189,27 @@ ul,li{list-style: none;}
         .dialog-second {
             height:195px;
             .dialog-top {
-                height:130px;position: relative;
-                dt {
-                    width:100px;position: absolute;left:10px;top:25px;z-index: 1;
-                }
-                dd.app-name {
-                    width:130px;position: absolute;left:4px;top:90px;z-index: 1;
-                }
-                dd.app-text {
-                    width:130px;height:55px;line-height:25px; position: absolute;left:140px;top:67px;z-index: 2;
-                }
+                height:105px;position: relative;margin-top:35px;
+//                dt {
+//                    width:100px;position: absolute;left:50%;top:25px;z-index: 1;
+//                }
+//                dd.app-name {
+//                    width:130px;position: absolute;left:50%;top:90px;z-index: 1;margin-left:-75px;
+//                }
+//                dd.app-text {
+//                    width:130px;height:55px;line-height:25px; position: absolute;left:140px;top:67px;z-index: 2;
+//                }
                 dd.app-code {
-                    width:116px;height: 121px;position: absolute;right:10px;top:-3px;z-index: 1;
+                    width:78px;height: 40px;position: absolute;right:30px;top:8px;z-index: 1;
                     img {
-                        width:110px;height: 110px;border:3px solid #fff;margin-top:5px;
+                        width:78px;height: 32px;margin-top:5px;
                     }
                 }
             }
         }
-        .dialog-center {
-            p {text-align: left;padding-left:10px;}
-        }
+    //    .dialog-center {
+            //p {text-align: left;padding-left:10px;}
+      //  }
     }
 }
 // 课程筛选页右边广告位
@@ -1504,7 +1504,7 @@ ul,li{list-style: none;}
 //直播筛选
 .container {
     .col-md-12 {
-        .add-selector-pic {width:1050px;overflow: hidden;float:left;}
+        .add-selector-pic {width:1059px;overflow: hidden;float:left;}
         .add-selector-seo {width:120px;overflow: hidden;float:right;}
     }
     .mb10 {margin-bottom: 20px;}
