--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -255,6 +255,7 @@
                            img {
                                float:left;
                                &.line {margin-top:20px;}
+                               &.qq-jiaru {margin:15px 0 0 10px;}
                            }
                            em {float:left;line-height: 180%;font-size: 14px;padding-top:16px;padding-left:5px;}
                        }
