--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -146,9 +146,8 @@
 
 	.course-center-list {
 	   width: 590px;height: 400px; margin-left: 10px;position: relative;
-	   
 	   .attend-class-time {
-	   	overflow: hidden;
+            overflow: hidden;
 	   	  span {
 			 width: 75px;line-height: 25px; padding-left: 10px;color: #666;
 	   	  }
@@ -207,7 +206,7 @@
             }
         }
         .course-content-teacher {
-				height: 90px; overflow: hidden;margin:0 0 20px;background: #f9f9f9;
+				height: 90px; margin:0 0 20px;background: #f9f9f9;position: relative;
 				span.f-left {
 					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:20px;color: #666;
 				}
@@ -240,7 +239,7 @@
                             img {width:40px;height: 40px;border-radius: 50%;cursor: pointer;}
                         }
                         &.name-c {
-                            line-height: 40px;font-size: 14px;margin-right: 10px;padding-top:10px;
+                            line-height: 40px;font-size: 14px;margin-right: 10px;padding-top:10px;width: 85px;
                         }
                        &.info-c {
                            float:right; line-height: 25px;font-size: 12px;color: #999;margin-right:20px;
@@ -877,8 +876,8 @@
     width:100%;position: fixed;bottom: 0;left:0;z-index: 999;background-color: hsla(254,100%,0%,0.6);
 }
 .course-teacher-qq {
-    width: 253px;height: 214px; position: absolute;right: 99px;top:-13px;z-index: 9999; background: url(img/qq-layer.png) no-repeat;
-    span {width:24px;height: 25px;position: absolute;right:5px;top:0;z-index: 0;cursor: pointer;}
+    width: 253px;height: 214px; position: absolute;right: 84px;top:-113px;z-index: 9999; background: url(img/qq-layer.png) no-repeat;
+    span {width:24px;height: 25px;position: absolute;right:5px;top:5px;z-index: 0;cursor: pointer;}
     a {width:140px;height:44px;position: absolute;left:40px;top:133px;z-index: 0;}
 }
 
