--- a/source/widget/UserHome.report/report.less
+++ b/source/widget/UserHome.report/report.less
@@ -220,6 +220,7 @@
 		}
 		.teacherInfo{
 			padding-top: 3em;
+			margin-top: 8px;
 			box-shadow: 0 -20px 20px 2px rgba(0,0,0,0.3);
 			position: relative;
 			z-index: 4;
