--- a/source/widget/UserHome.report/report.less
+++ b/source/widget/UserHome.report/report.less
@@ -103,17 +103,6 @@
 	max-width: 980px;
 	margin: 0 auto;
 	opacity: 0;
-	.shadow{
-		background: transparent;
-		background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,0)), to(rgba(0,0,0,0.5)));
-        background: -moz-linear-gradient(top, rgba(0,0,0,0),rgba(0,0,0,0.5));
-	    background: -ms-linear-gradient(top, rgba(0,0,0,0),rgba(0,0,0,0.5)); 
-		position: absolute;
-	    width:  calc(~"80% - 10px");
-	    height: 50px;
-	    left: 10%;
-    	padding:0 10px;
-	}
 	h4{
 		text-align: center;
 		margin-top:24px;
@@ -711,4 +700,25 @@
 			}
 		}
 	}
+}
+.body-bgColor ul {
+	li{
+		width: 10px;
+		height: 10px;
+		background: #fff;
+		border-color: blue;
+		border-radius: 50%;
+		margin-bottom: 10px;
+		cursor: pointer;
+		list-style: none;
+		&:last-child{
+			margin-bottom: 0;
+		}
+		&.active{
+			background: blue;
+		}
+	}
+	position: absolute;
+	top: 50%;
+	right: 20px;
 }
