更换吉祥物

--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -684,18 +684,18 @@
 .ui-comment-items {
 	position: relative; z-index: 10;
 	.Extend_add_gold {
-		width:110px;
-        height:150px;
+		width:120px;
+        height:187px;
 		position: absolute;
         left: 395px; 
         bottom: 0;
         opacity : 0;
-        background: url("img/add_gold.png") no-repeat;
+        background: url("img/new_add_gold.png") no-repeat;
 		p {
-            width:105px;
+            width:85px;
             height: 20px;
             text-align: center;
-            margin-top: 104px;
+            margin-top: 170px;
             color: #666;
             font-size: 14px;
             font-weight: bold;
