--- a/source/widget/Public.Header/header.css
+++ b/source/widget/Public.Header/header.css
@@ -15,14 +15,16 @@
 }
 #module-header .h-logo {
   float: left;
-  width: 350px;
+  width: 340px;
   line-height: 99px;
+  margin-right: 10px;
+  overflow: hidden;
 }
 #module-header .h-logo a {
   display: block;
   width: 350px;
   height: 99px;
-  background: url(img/logo.png?__inline) no-repeat left center;
+  background: url(img/logo.gif?20160704) no-repeat 5px -5px;
   color: transparent;
 }
 #module-header .h-search {
