--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -16,13 +16,15 @@
     clear: both;
     .h-logo {
         float: left;
-        width: 350px;
+        width: 340px;
         line-height: 99px;
+        margin-right: 10px;
+        overflow: hidden;
         a {
             display: block;
             width: 350px;
             height: 99px;
-            background: url(img/logo.png?__inline) no-repeat left center;
+            background: url(img/logo.gif?20160704) no-repeat 5px -5px;
             color: transparent;
             
         }
