--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -619,6 +619,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	.delay-fsd{
 		float: left;
 		margin-right: 22px;
+		width: 180px;
 	}
 	.delay-detail{
 		float: left;
@@ -1577,7 +1578,7 @@ button.ajust-course-btn[disabled]{
 	}
 }
 .permanent-adjust-nocourse-detail{
-	background: url('img/password_end.png') no-repeat left center;
+	background: url('img/password_end.png') no-repeat 50px center;
 	height: 309px;
 	line-height: 24px;
 	padding: 85px 0 46px 280px;
