--- a/source/widget/UserHome.notice/notice.less
+++ b/source/widget/UserHome.notice/notice.less
@@ -82,6 +82,8 @@
         img{
             _float: left;
             _margin-right: 240px;
+            width: 100px;
+            height: 100px;
         }
         p{
             _float: none;
