--- a/source/widget/Public.Header/header.css
+++ b/source/widget/Public.Header/header.css
@@ -24,7 +24,7 @@
   display: block;
   width: 350px;
   height: 99px;
-  background: url(img/logo.gif?20160704) no-repeat 5px -5px;
+  background: url(img/logo.png?20160707) no-repeat left center;
   color: transparent;
 }
 #module-header .h-search {
