--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -85,11 +85,11 @@
         a {
             color: #fff;
             display: block;
-            font: 400 15px/44px "microsoft yahei";
+            font: 400 16px/44px "microsoft yahei";
             height: 45px;
             padding: 0 10px;
             margin: 0;
-            background: #1e89e0;
+            background: url(img/headNav.png) no-repeat;
             .ci-right {
                 top: 20px;
                 right: 7px;
